--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.table-spacing {
+    border-spacing: 5px;
+    border-collapse: separate;
+}
